bin_PROGRAMS = parseJsonFile parseJsonFileMatrix listAddresses
parseJsonFile_SOURCES =  parseJsonFile.c
parseJsonFile_LDADD =  -L../src -ljparse
listAddresses_SOURCES =  listAddresses.c
listAddresses_LDADD =  -L../src -ljparse
parseJsonFileMatrix_SOURCES =  parseJsonFileMatrix.c
parseJsonFileMatrix_LDADD =  -L../src -ljparse

ACLOCAL_AMFLAGS = -I m4
